Less cohesion in Eventcontroller.jave